--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -355,7 +355,6 @@ article{
   pre {
     font-size: small;
     margin: 0;
-    background: #f7f7f7;
     word-break: break-all;
     word-wrap: break-word;
     white-space: pre;
@@ -363,7 +362,14 @@ article{
       display: block;
       word-wrap: normal;
       overflow-x: auto;
+      padding: 0;
     }
+  }
+  code {
+    background: #f7f7f7;
+    padding-left: 0.2em;
+    padding-right: 0.2em;
+    border-radius: 2px;
   }
 }
 .entry-meta{
