--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -240,7 +240,12 @@ section {
   }
   .contentArea { 
     padding-bottom: 30px; 
-    padding-top: 45px; 
+    padding-top: 45px;
+    .articleTitle {
+      font-size: 36px;
+      line-height: 48px;
+      width: 65%;
+    }
     .projectDetails { 
       width: 100%; 
       @media only screen and (min-width: 768px) {
