--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -291,7 +291,21 @@ section {
           }
         }
       }
-
+      .media--stretched{
+        width: 100vw;
+        margin-left: -13%;
+        @media only screen and (min-width: 768px){
+          margin-left: -20%;
+          width: 60vw;
+        }
+        @media only screen and (min-width: 960px){
+          width: 70vw;
+        }
+        @media only screen and (min-width: 1280px){
+          margin-left: -22%;
+          width: 70vw;
+        }
+      }
     }
     .projectMeta { 
       width: 100%; 
