--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -289,8 +289,7 @@ section {
             width: 70vw; } }
         @media only screen and (min-width: 1280px) {
           section .contentArea .projectDetails .media--stretched {
-            margin-left: -22%;
-            width: 70vw; } }
+            margin-left: -22%; } }
     section .contentArea .projectMeta {
       width: 100%;
       text-align: right;
