--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -15,6 +15,7 @@
 html {
   font-size: 100%;
   overflow-y: scroll;
+  overflow-x: hidden;
   -webkit-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
   font-smoothing: antialiased;
@@ -279,17 +280,17 @@ section {
             font-style: normal; }
       section .contentArea .projectDetails .media--stretched {
         width: 100vw;
-        margin-left: -13%; }
+        margin-left: -10vw;
+        margin-top: 60px;
+        margin-bottom: 60px; }
         @media only screen and (min-width: 768px) {
           section .contentArea .projectDetails .media--stretched {
-            margin-left: -20%;
+            margin-left: -6vw;
             width: 60vw; } }
         @media only screen and (min-width: 960px) {
           section .contentArea .projectDetails .media--stretched {
-            width: 70vw; } }
-        @media only screen and (min-width: 1280px) {
-          section .contentArea .projectDetails .media--stretched {
-            margin-left: -22%; } }
+            width: 70vw;
+            margin-left: -7vw; } }
     section .contentArea .projectMeta {
       width: 100%;
       text-align: right;
