--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -14,11 +14,14 @@
   src: url(../typefaces/UniversLTStd-Cn.otf);
 }
 */
-
+// html::-webkit-scrollbar-thumb:vertical { background-color:#00ff00; width:12px; }
+// html::-webkit-scrollbar-thumb:horizontal { background-color:#00ff00; height:12px; }
+// html::-webkit-scrollbar { height:12px; width:12px; background-color:rgba(255,255,255,0.1); }
 
 html { 
   font-size: 100%;
   overflow-y: scroll;  
+  overflow-x: hidden;  
   -webkit-text-size-adjust: 100%; 
   -webkit-font-smoothing:antialiased; 
   font-smoothing:antialiased; 
@@ -293,16 +296,16 @@ section {
       }
       .media--stretched{
         width: 100vw;
-        margin-left: -13%;
+        margin-left: -10vw;
+        margin-top: 60px;
+        margin-bottom: 60px;
         @media only screen and (min-width: 768px){
-          margin-left: -20%;
+          margin-left: -6vw;
           width: 60vw;
         }
         @media only screen and (min-width: 960px){
           width: 70vw;
-        }
-        @media only screen and (min-width: 1280px){
-          margin-left: -22%;
+          margin-left: -7vw;
         }
       }
     }
