--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -203,6 +203,7 @@ section {
         -o-transform: translate(0, 0);
         transform: translate(0, 0);
         opacity: 1;
+        display: block;
       }
     }
     img {
