--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -189,12 +189,27 @@ section {
     display: block; 
     margin: 0; 
     background-repeat: no-repeat; 
-    background-size: 100% auto; 
+    background-size: cover; 
     overflow: hidden;
     &.cover-photo {
       height: 80vh;
       background-position: center center;
       background-size: cover;
+    }
+    &.gradient-fade {
+      position: relative;
+      &::after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 20%;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%); /* FF3.6-15 */
+        background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
+        background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+      }
     }
     &.active{
       img {
