--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -314,10 +314,11 @@ section {
             width: 70vw;
             margin-left: -7vw; } }
       section .contentArea .projectDetails .section {
-        display: block; }
+        display: flex;
+        flex-direction: column; }
         @media only screen and (min-width: 960px) {
           section .contentArea .projectDetails .section {
-            display: flex; } }
+            flex-direction: row; } }
         @media only screen and (min-width: 960px) {
           section .contentArea .projectDetails .section .media--right {
             position: absolute;
