--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -327,9 +327,10 @@ section {
         }
       }
       .section{
-        display: block;
+        display: flex;
+        flex-direction: column;
         @media only screen and (min-width: 960px){
-          display: flex;
+          flex-direction: row;
         }
         .media--right {
           @media only screen and (min-width: 960px){
