feat: add more nav links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,13 +71,20 @@
   <aside id="mainSide" class="column">
     <div class="padded">
       <div id="logo"><a href="/"><img src="/assets/i/logo.svg"></a></div>
-         <h2 id="portfolioLinks">We craft digital products built on web, mobile &amp; Bitcoin &mdash; <a href="/about">Learn more</a>.</h2>
+         <h2 id="portfolioLinks">We craft digital products built on web, mobile &amp; Bitcoin.</h2>
 
       <div class="contact-footer typeface-colour-secondary">
         <hr>
         <div class="columns">
           <ul class="heading-typeface">
-            <li><span class="typeface-colour-white">Projects </span></li>
+            <li><span class="typeface-colour-white">&mdash; Learn more </span></li>
+            <li><span class="typeface-colour-white">›</span> <a href="/about">About Us</a></li>
+            <li><span class="typeface-colour-white">›</span> <a href="{% post_url 2021-06-25-the-state-of-publishing %}">Latest Article</a></li>
+            </li>
+          </ul>
+
+          <ul class="heading-typeface">
+            <li><span class="typeface-colour-white">&mdash; Projects </span></li>
             <li><span class="typeface-colour-white">›</span> <a href="https://bitcoin.design">bitcoin.design</a></li>
             <li><span class="typeface-colour-white">›</span> <a href="https://bolt.fun">BOLT.FUN</a></li>
             <li><span class="typeface-colour-white">›</span> <a href="https://bed.money">BED.MONEY</a></li>
@@ -85,6 +92,7 @@
           </ul>
 
           <ul class="heading-typeface">
+            <li><span class="typeface-colour-white">&mdash; Contact </span></li>
             <li><span class="typeface-colour-white">›</span> SKYPE: <a href="skype:peakshift?chat">peakshift</a></li>
             <li><span class="typeface-colour-white">›</span> EMAIL: <a href="mailto:team@peakshift.com">team@peakshift.com</a>
             </li>
