--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,8 +96,10 @@
           <ul class="heading-typeface">
             <li><span class="typeface-colour-white">&mdash; Contact </span></li>
             <li><span class="typeface-colour-white">›</span> SKYPE: <a href="skype:peakshift?chat">peakshift</a></li>
-            <li><span class="typeface-colour-white">›</span> EMAIL: <a href="mailto:team@peakshift.com">team@peakshift.com</a><br />
-              <span class="typeface-colour-white">›</span> 
+            <li><span class="typeface-colour-white">›</span> EMAIL: <a href="mailto:team@peakshift.com">team@peakshift.com</a></li>
+            <li class="wb mt1">
+              <small>PGP</small><br>
+              A815 2601 F001 645B 5269  2258 6004 5CFE 793B 59AD
             </li>
           </ul>
           <p class="typeface-colour-secondary rs small">
