docs(research): clean up formating

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,6 +79,7 @@
           <ul class="heading-typeface">
             <li><span class="typeface-colour-white">&mdash; Learn more </span></li>
             <li><span class="typeface-colour-white">›</span> <a href="/about">About Us</a></li>
+            <li><span class="typeface-colour-white">›</span> <a href="/research">Research</a></li>
 {% for post in site.posts limit:1 %}
             <li><span class="typeface-colour-white">›</span> <a href="{{ post.url }}" title="{{ post.title }}">Latest Article</a></li>
             </li>
