--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,7 +96,7 @@
 
           <ul class="heading-typeface">
             <li><span class="typeface-colour-white">&mdash; Contact </span></li>
-            <li><span class="typeface-colour-white">›</span> SKYPE: <a href="skype:peakshift?chat">peakshift</a></li>
+            <li><span class="typeface-colour-white">›</span> Telegram: <a href="https://t.me/peakshift">peakshift</a></li>
             <li><span class="typeface-colour-white">›</span> EMAIL: <a href="mailto:team@peakshift.com">team@peakshift.com</a></li>
             <li class="wb mt1">
               <small>PGP</small><br>
