feat: animate this sexy logo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,13 +64,18 @@
   '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-TPS5PB');</script>
   <!-- End Google Tag Manager -->
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
 <body class="">
 
 <div id="wrapper">
   <aside id="mainSide" class="column">
     <div class="padded">
-      <div id="logo"><a href="/"><img src="/assets/i/logo.svg"></a></div>
+      <div id="logo">
+        <a href="/">
+          <lottie-player src="/assets/i/logo-ani/3.json"  background="transparent"  speed="1"  style="width: 80%; height: ;"    autoplay></lottie-player>
+        </a>
+      </div>
          <h2 id="portfolioLinks">We craft digital products built on web, mobile &amp; Bitcoin.</h2>
 
       <div class="contact-footer typeface-colour-secondary">
