--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -664,7 +664,7 @@ section .contentArea .projectDetails ul.pills li::before {
 
 section .contentArea .projectDetails ul.pills li {
    margin: 0px 4px 6px 0px;
-   padding-top: 8px 14px 4px auto;
+   padding: 8px 14px 4px;
    list-style: none inside;
    display: inline-block;
    width: auto;
