refactor: create folders for abstractions

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,6 +96,7 @@
             <li><span class="typeface-colour-white">›</span> <a href="https://bitcoin.design">bitcoin.design</a></li>
             <li><span class="typeface-colour-white">›</span> <a href="https://bolt.fun">BOLT.FUN</a></li>
             <li><span class="typeface-colour-white">›</span> <a href="https://bed.money">BED.MONEY</a></li>
+            <li><span class="typeface-colour-white">›</span> <a href="/abstractions">BITCOIN ABSTRACTIONS</a></li>
             </li>
           </ul>
 
