--- a/v2/src/app/globals.css
+++ b/v2/src/app/globals.css
@@ -8,6 +8,13 @@
   --primary: #dd1e3e;
 }
 
+html {
+  -webkit-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
+  font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+}
+
 body {
   position: relative;
   padding: 10px;
@@ -38,37 +45,6 @@ body {
   font-family: "Libre Baskerville", serif;
   font-style: italic;
   font-weight: normal;
-}
-
-::-webkit-scrollbar {
-  width: 4px;
-}
-
-.small-scrollbar::-webkit-scrollbar {
-  width: 4px;
-}
-
-@media screen and (min-width: 668px) {
-  /* width */
-  ::-webkit-scrollbar {
-    width: 12px;
-  }
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: #e5e5e5;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  background-color: #c8c8c8;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background-color: #aaaaaa;
 }
 
 @media (pointer: coarse) {
