--- a/v2/src/app/globals.css
+++ b/v2/src/app/globals.css
@@ -53,7 +53,6 @@ body {
   position: relative;
   padding: 10px;
   background-color: var(--page-bg-color);
-  transition: background-color 0.5s ease-in-out;
 }
 
 .page-container {
@@ -91,5 +90,20 @@ body {
 @media (pointer: coarse) {
   .touch-device\:hidden {
     display: none;
+  }
+}
+
+.fade-in {
+  animation: fadeIn 0.5s ease-in-out;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
