style(design-sprints): add doodle on services + thin ampersand

--- a/v2/src/app/globals.css
+++ b/v2/src/app/globals.css
@@ -85,6 +85,7 @@ body {
   font-family: "Libre Baskerville", serif;
   font-style: italic;
   font-weight: normal;
+  -webkit-text-stroke: 1.5px #FFF;
 }
 
 @media (pointer: coarse) {
